[Misc] Improve test by fixing some violations