@@ -19,7 +19,7 @@
  */
 package org.xwiki.logging.logback.internal;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
@@ -27,7 +27,6 @@ import java.util.concurrent.locks.ReentrantLock;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
-import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -45,7 +44,6 @@ import org.xwiki.test.junit5.mockito.InjectComponentManager;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
@@ -96,14 +94,14 @@ class LogbackEventGeneratorTest
 
         EventListener listener = mock(EventListener.class);
         when(listener.getName()).thenReturn("mylistener");
-        when(listener.getEvents()).thenReturn(Arrays.asList(event));
+        when(listener.getEvents()).thenReturn(List.of(event));
 
         this.observationManager.addListener(listener);
 
         this.logger.error("error message");
 
         Event expected = new LogEvent(null, LogLevel.ERROR, "error message", null, null);
-        verify(listener).onEvent(eq(expected), eq(getClass().getName()), eq(null));
+        verify(listener).onEvent(expected, getClass().getName(), null);
         assertEquals("error message", this.logCapture.getMessage(0));
     }
 
@@ -112,7 +110,7 @@ class LogbackEventGeneratorTest
     {
         // Simulate that the Logging implementation is not Logback
         LogbackEventGenerator generator =
-            (LogbackEventGenerator) this.componentManager.getInstance(EventListener.class, "LogbackEventGenerator");
+            this.componentManager.getInstance(EventListener.class, "LogbackEventGenerator");
         LogbackEventGenerator spyGenerator = spy(generator);
         when(spyGenerator.getRootLogger()).thenReturn(null);
 
@@ -131,23 +129,17 @@ class LogbackEventGeneratorTest
     {
         EventListener listener = mock(EventListener.class);
         when(listener.getName()).thenReturn("mylistener");
-        when(listener.getEvents()).thenReturn(Arrays.asList(new LogEvent()));
+        when(listener.getEvents()).thenReturn(List.of(new LogEvent()));
 
         this.observationManager.addListener(listener);
 
         // Make the listener wait
         Lock lock = new ReentrantLock();
         lock.lock();
-        doAnswer(new Answer<Void>()
-        {
-            @Override
-            public Void answer(InvocationOnMock invocation)
-            {
-                lock.lock();
-                lock.unlock();
-
-                return null;
-            }
+        doAnswer((Answer<Void>) invocation -> {
+            lock.lock();
+            lock.unlock();
+            return null;
         }).when(listener).onEvent(any(), any(), any());
 
         CompletableFuture.runAsync(() -> this.logger.error("thread1 error message"));
@@ -156,7 +148,7 @@ class LogbackEventGeneratorTest
         // Make threads have enough time to send the events
         Thread.sleep(100);
 
-        // Make sure both thread send the log
+        // Make sure both threads send the log
         verify(listener, times(2)).onEvent(any(), any(), any());
 
         // Release the threads
